--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.15.5",
     "morgan": "~1.9.0",
     "ejs": "~2.5.7",
+    "ejs-locals": "^1.0.2",
     "serve-favicon": "~2.4.5"
   }
 }
