--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
+    "ejs-locals": "^1.0.2",
     "express": "~4.15.5",
     "morgan": "~1.9.0",
-    "ejs": "~2.5.7",
-    "ejs-locals": "^1.0.2",
     "mysql": "^2.15.0",
+    "mysql2": "^1.5.1",
+    "sequelize": "^4.31.2",
+    "sequelize-cli": "^3.2.0",
     "serve-favicon": "~2.4.5"
   }
 }
