--- a/config/index.js.dist
+++ b/config/index.js.dist
@@ -2,6 +2,7 @@ module.exports = {
 	database : {
 		host     : 'HOST',
 		user     : 'LOGIN',
-		password : 'PASSWORD'
+		password : 'PASSWORD',
+		database : 'DATABASE'
 	}
 }
